# website_comparison_tool

./: .gitignore  app.py  comparator.py  crawler.py  pyproject.toml
templates/: index.html
